- When coarsening step not succeed, stop setup instead of quit.
- Change interface to MUMPS a little bit.
- Fix an output memory out-of-bound bug in pvfgmres.
- Modify io.c a little, not important.
- Add error handling in AMG setup in case problems happen.
- Remove error handling for AMG setup in amg.c/famg.c: now in amg_setup.c.
- Change output format slightly.
- Update regression tests.

04/30/2013 FASP 1.2.8:
- Change filename blas_block.c --> blas_bcsr.c.
- Change filename threads_schedule.c --> threads.c.
- Change directory setting for fasp-based packages.
- Update VS08 solution according to the recent changes of faspsolver.
- Start to clean up fasp4blkoil; some functions related are changed.
- Remove unused variables.
- Fix a safe-guard saving bug in BiCGstab.

04/27/2013 FASP 1.2.7:
- Add a multicoloring scheme.
- Fix a typo in the AMG output.
- Add coarsening types to message.h.
- Add two parameters to control aggressive coarsening levels and paths for strong coupled C points.
- Update BLAS operations for Block_CSR and STR.
- Fix a direct solver calling bug for BSR.
- Fix a VS08 warning.
- Separte linked list from RS coarsening.
- Update sf.net and documentation.

04/09/2013 FASP 1.2.6:
- Add NAN check to SPCG.
- Prepare BiCGstab for adding safe-guard.
- Fix a bug in computing reduction factor in BiCGstab.
- Add a safer version of BiCGstab: SBCGS.
- Fix a typo in the print out function.
- Add stop type support to GMRes. 
- Prepare GMRes for adding safe-guard.
- Add a safer version of PGMRes: SPGMRes.
- Finish up VGMRes and prepare it for adding safe-guard.
- Add a safer version of PVGMRes: SPVGMRes.
- Complete PMinRes and add a safer version PMinRes: SPMinRes.
- Add numbers for "safe" krylov methods in message.h.
- Fix a PBiCGstab unexpected exit bug.

03/28/2013 FASP 1.2.5:
- Update MUMPS support.
- Revise cmake to support cmake version 2.6.
- Fix bugs in block AMG.
- Update Intel compiler version to 2013.2.149 for VS2008 solution.