@@ -25,7 +25,7 @@
  * \date   2010/04/06
  */
 AMG_data * fasp_amg_data_create (SHORT max_levels)
-{    
+{
     AMG_data *mgl = (AMG_data *)fasp_mem_calloc(max_levels,sizeof(AMG_data));
     
     INT i;
@@ -52,11 +52,11 @@ AMG_data * fasp_amg_data_create (SHORT max_levels)
  * \date   08/07/2011
  */
 AMG_data_bsr * fasp_amg_data_bsr_create (SHORT max_levels)
-{    
+{
     SHORT i;
     
     AMG_data_bsr *mgl = (AMG_data_bsr *)fasp_mem_calloc(max_levels,sizeof(AMG_data_bsr));
-        
+    
     for (i=0; i<max_levels; ++i) {
         mgl[i].max_levels = max_levels;
         mgl[i].num_levels = 0;
@@ -76,22 +76,22 @@ AMG_data_bsr * fasp_amg_data_bsr_create (SHORT max_levels)
  * \param nwork     Size of the work array
  * \param iludata   Pointer to the ILU_data
  *
- * \author Chensong Zhang 
+ * \author Chensong Zhang
  * \date   2010/04/06
  */
-void fasp_ilu_data_alloc (INT iwk, 
-                          INT nwork, 
+void fasp_ilu_data_alloc (INT iwk,
+                          INT nwork,
                           ILU_data *iludata)
-{    
+{
 #if DEBUG_MODE
     printf("### DEBUG: iwk=%d, nwork=%d\n", iwk, nwork);
 #endif
     
     iludata->ijlu=(INT*)fasp_mem_calloc(iwk, sizeof(INT));
     
-    iludata->luval=(REAL*)fasp_mem_calloc(iwk, sizeof(REAL)); 
+    iludata->luval=(REAL*)fasp_mem_calloc(iwk, sizeof(REAL));
     
-    iludata->work=(REAL*)fasp_mem_calloc(nwork, sizeof(REAL)); 
+    iludata->work=(REAL*)fasp_mem_calloc(nwork, sizeof(REAL));
     
     return;
 }
@@ -103,7 +103,7 @@ void fasp_ilu_data_alloc (INT iwk,
  * \param *schwarz  pointer to the AMG_data data
  *
  * \author Xiaozhe Hu
- * \date 2010/04/06 
+ * \date 2010/04/06
  */
 void fasp_schwarz_data_free (Schwarz_data *schwarz)
 {
@@ -122,20 +122,24 @@ void fasp_schwarz_data_free (Schwarz_data *schwarz)
 }
 
 /**
- * \fn void fasp_amg_data_free (AMG_data *mgl)
+ * \fn void fasp_amg_data_free (AMG_data *mgl, AMG_param *param)
  *
  * \brief Free AMG_data data memeory space
  *
- * \param mgl  Pointer to the AMG_data
+ * \param mgl    Pointer to the AMG_data
+ * \param param  Pointer to AMG parameters
  *
  * \author Chensong Zhang
- * \date   2010/04/06 
+ * \date   2010/04/06
+ *
+ * Modified by Chensong Zhang on 05/05/2013: Clean up param as well!
  */
-void fasp_amg_data_free (AMG_data *mgl)
-{    
+void fasp_amg_data_free (AMG_data *mgl,
+                         AMG_param *param)
+{
     const INT max_levels = mgl[0].max_levels;
     INT i;
-
+    
     for (i=0; i<max_levels; ++i) {
         if (&mgl[i].A) { fasp_dcsr_free(&mgl[i].A); }
         if (&mgl[i].P) { fasp_dcsr_free(&mgl[i].P); }
@@ -149,17 +153,22 @@ void fasp_amg_data_free (AMG_data *mgl)
     }
     
     for (i=0; i<mgl->near_kernel_dim; ++i) {
-        fasp_mem_free(mgl->near_kernel_basis[i]); 
+        fasp_mem_free(mgl->near_kernel_basis[i]);
         mgl->near_kernel_basis[i]=NULL;
     }
-
+    
 #if WITH_MUMPS
-     /* Destroy MUMPS direct solver on the coarsest level */
-     fasp_solver_mumps_steps(&mgl[max_levels-1].A, &mgl[max_levels-1].b, &mgl[max_levels-1].x, 3);
+    /* Destroy MUMPS direct solver on the coarsest level */
+    fasp_solver_mumps_steps(&mgl[max_levels-1].A, &mgl[max_levels-1].b, &mgl[max_levels-1].x, 3);
 #endif
     
     fasp_mem_free(mgl->near_kernel_basis); mgl->near_kernel_basis = NULL;
+    
     fasp_mem_free(mgl); mgl = NULL;
+    
+    if (param != NULL) {
+        if ( param->cycle_type == AMLI_CYCLE ) fasp_mem_free(param->amli_coef);
+    }
 }
 
 /**
@@ -176,7 +185,7 @@ void fasp_amg_data_bsr_free (AMG_data_bsr *mgl)
 {
     const INT max_levels = mgl[0].max_levels;
     INT i;
-
+    
     for (i=0; i<max_levels; ++i) {
         if (&mgl[i].A) { fasp_dbsr_free(&mgl[i].A); }
         if (&mgl[i].P) { fasp_dbsr_free(&mgl[i].P); }
@@ -196,7 +205,7 @@ void fasp_amg_data_bsr_free (AMG_data_bsr *mgl)
         if (&mgl[i].LU) { fasp_ilu_data_free(&mgl[i].LU); }
         //if (&mgl[i].schwarz) {fasp_schwarz_data_free (&mgl[i].schwarz);}
     }
-        
+    
     for (i=0; i<mgl->near_kernel_dim; ++i) {
         if (&mgl->near_kernel_basis[i]) fasp_mem_free(mgl->near_kernel_basis[i]);
         mgl->near_kernel_basis[i]=NULL;
@@ -215,10 +224,10 @@ void fasp_amg_data_bsr_free (AMG_data_bsr *mgl)
  * \param ILUdata   Pointer to ILU_data
  *
  * \author Chensong Zhang
- * \date   2010/04/03  
+ * \date   2010/04/03
  */
 void fasp_ilu_data_free (ILU_data *ILUdata)
-{    
+{
     if (ILUdata==NULL) return;
     
     fasp_mem_free(ILUdata->ijlu);  ILUdata->ijlu  = NULL;
@@ -236,7 +245,7 @@ void fasp_ilu_data_free (ILU_data *ILUdata)
  * \param ILUdata   Pointer to ILU_data
  *
  * \author Chensong Zhang
- * \date   2010/03/23 
+ * \date   2010/03/23
  */
 void fasp_ilu_data_null (ILU_data *ILUdata)
 {
@@ -252,7 +261,7 @@ void fasp_ilu_data_null (ILU_data *ILUdata)
  * \param pcdata   Pointer to precond
  *
  * \author Chensong Zhang
- * \date   2010/03/23 
+ * \date   2010/03/23
  */
 void fasp_precond_null (precond *pcdata)
 {
